--- a/ProfissionaisDisponiveis.css
+++ b/ProfissionaisDisponiveis.css
@@ -7,7 +7,10 @@
 
 body {
     background-color: #f2f2f2;
-        color: #333;
+    color: #333;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .top-header {
@@ -205,7 +208,7 @@ body {
   }
 
   .footer {
-    margin-top: 3rem;
+    margin-top: auto;
     background-color: #ffffff;
     padding: 2rem 1rem 1rem;
     box-shadow: 0 -1px 10px rgba(0,0,0,0.05);
