--- a/Tela_configurações.css
+++ b/Tela_configurações.css
@@ -161,7 +161,7 @@ body {
 }
  
 .tab-content {
-    margin: 20%;
+    margin: 0 20%;
     margin-top: 1rem;
     background: #fff;
     padding: 1rem;
