--- a/ProfissionaisDisponiveis.css
+++ b/ProfissionaisDisponiveis.css
@@ -104,7 +104,6 @@ body {
 
 .filtros {
   padding-top: 45px;
-  width: 250px;
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -162,12 +161,14 @@ body {
 
 .cards {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-  gap: 1.5rem;
+  grid-template-columns: repeat(auto-fill, minmax(180px, max-content));
+  gap: 1rem;
+  justify-content: start; /* evita espalhar os itens igualmente */
 }
 
 .card {
-  max-width: 150px;
+  max-width: 250px;
+  heigth: 250px;
   background-color: #fff;
   border-radius: 10px;
   padding: 1rem;
@@ -207,47 +208,40 @@ body {
   margin: 0 1px;
 }
 
-.footer {
-  margin-top: auto;
-  background-color: #ffffff;
-  padding: 2rem 1rem 1rem;
-  box-shadow: 0 -1px 10px rgba(0,0,0,0.05);
-  font-size: 0.9rem;
-}
+/* responsividade */
 
-.footer-top {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  border-bottom: 1px solid #ddd;
-  padding-bottom: 1rem;
-}
+@media screen and (max-width: 670px) {
+  .filtros {
+    padding-top: 45px;
+    width: 80vw;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
+  
+  .cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(280px, max-content));
+    gap: 1rem;
+    justify-content: center;
+  }
 
-.footer-logo img.logo {
-  height: 40px;
-}
-
-.footer-text {
-  text-align: center;
-  flex: 1;
-  color: #666;
-}
-
-.footer-social a {
-  color: #00bcd4;
-  margin-left: 10px;
-  transition: transform 0.2s;
-}
-
-.footer-social a:hover {
-  transform: scale(1.2);
-  color: #0097a7;
-}
-
-.footer-bottom {
-  margin-top: 1rem;
-  text-align: center;
-  color: #aaa;
-  font-size: 0.8rem;
+  .conteudo h2 {
+    max-width: 100vw;
+    display: flex;
+    margin-bottom: 1rem;
+    justify-content: center;
+  }
+  
+  .card {
+    width: 100rem;
+    heigth: 250px;
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 2rem;
+    text-align: center;
+    transition: 0.3s;
+    cursor: pointer;
+    border: 2px solid transparent;
+  }
 }
