Js de pagina: criar conta

--- a/CriarConta/CriarConta.css
+++ b/CriarConta/CriarConta.css
@@ -162,3 +162,14 @@ button:hover,
         width: 100%;
     }
 }
+
+.erro-msg {
+    color: red;
+    font-size: 0.9rem;
+    margin-top: 4px;
+    display: block;
+}
+
+.input-erro {
+    border: 2px solid red;
+}
