--- a/ProfissionaisDisponiveis/ProfissionaisDisponiveis.css
+++ b/ProfissionaisDisponiveis/ProfissionaisDisponiveis.css
@@ -168,7 +168,7 @@ body {
 
 .card {
   max-width: 250px;
-  heigth: 250px;
+  height:  250px;
   background-color: #fff;
   border-radius: 10px;
   padding: 1rem;
@@ -235,7 +235,7 @@ body {
   
   .card {
     width: 100rem;
-    heigth: 250px;
+    height:  250px;
     background-color: #fff;
     border-radius: 10px;
     padding: 2rem;
