--- a/Configuracoes/Tela_configurações.css
+++ b/Configuracoes/Tela_configurações.css
@@ -7,12 +7,15 @@
 
 html, body {
     height: 100%;
+    margin: 0;
+    padding: 0;
 }
-
 body {
     display: flex;
     flex-direction: column;
+    min-height: 100%;
     background: linear-gradient(135deg, #F2F2F2, #91daeb);
+    background-attachment: fixed; /* garante que o gradiente continue mesmo ao rolar */
 }
 
 .tabs {
